<resources>
    <string name="app_name">Tap&amp;See</string>
    <string name="TitleEtape5">Etape 5/6 : Choix de la durée</string>
    <string name="TitleEtape4">Etape 4/6 : Choix de la plateforme</string>
    <string name="SwitchIndifferent">Indifférent</string>
    <string name="DureeMin">Durée minimale</string>
    <string name="DureeMax">Durée maximale</string>
    <string name="ButtonNext">Etape suivante</string>
    <string name="ButtonBack">Etape précédente</string>
    <string name="ButtonBackMenu">Retour au menu</string>
    <string name="txtGestList">Gérer les listes</string>
    <string name="txtGestProfils">Gérer les profils</string>
    <string name="txtTittle"><![CDATA[TAP & SEE]]></string>
    <string name="txtGestFilms">Choisir un film</string>
    <string name="ContentDureeMax">00:00</string>
    <string name="textMax">TextView</string>
    <string name="nouveautes">Nouveautés seulement</string>
    <string name="plateformes_disponibles">Plateformes disponibles :</string>
    <string name="checkBoxIndiff">Indifférent</string>
    <string name="apple_tv">Apple TV +</string>
    <string name="hulu">Hulu</string>
    <string name="ocs">OCS</string>
    <string name="mycanal">MyCANAL</string>
    <string name="disney">Disney+</string>
    <string name="amazon_prime_video">Amazon Prime Video</string>
    <string name="sfr_play_vod">SFR Play VOD</string>
    <string name="salto">Salto</string>
    <string name="netflix">Netflix</string>

    <string name="TitleEtape1">Etape 1/6 : Choix du profil</string>
    <string name="TitleEtape2">Etape 2/6 : Choix du genre</string>
    <string name="TitleEtape31">Etape 3/6 : Choix du/des réalisateurs</string>
    <string name="subTitleList1">Choisissez les listes à inclure</string>
    <string name="subTitleList2">Choisissez les listes à exclure</string>
    <string name="TitleEtape32">Etape 3/6 : Choix du/des acteurs</string>
    <string name="TitleEtape6">Etape 6/6 : Choix des listes</string>
    <string name="promptProfil">Choisissez un profil</string>
    <string name="TitleEcranFinal">Proposition de films</string>
    <string name="previous_film">Film précédent</string>
    <string name="next_film">Film suivant</string>
    <string name="ok">OK</string>
    <string name="titlefilm">Title</string>
    <string name="textTitleFilm">Une merveilleuse proposition</string>
    <string name="plateformes">Plateformes</string>
    <string name="listePlateformesFilm">Liste des plateformes qui proposent le film</string>
    <string name="titleDuree">Durée du film</string>
    <string name="dureesPossibles">Insérer durée</string>
    <string name="titleSynopsis">Synopsis</string>
    <string name="testContenusSynopsis">Merveilleux synopsis qui fait rêver</string>
    <string name="titleReal">Réalisateur</string>
    <string name="Real">Nom du réalisateur</string>
    <string name="genre">Genre</string>
    <string name="liste_genres">Liste de genres</string>
    <string name="rechercheDeFilmHeader">Recherche de film</string>
    <string-array name="profil_array">
        <item>Profil 1</item>
        <item>Profil 2</item>
        <item>Profil 3</item>
        <item>Profil 4</item>
        <item>....</item>
    </string-array>

</resources>